// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cnc_vcarve flat-bottom posted through vcarve_mach3.hbs on Laguna Swift 5x10 > matches the flat-bottom posted-program snapshot (NEW snapshot; the wedge snapshot above is untouched) 1`] = `
"%
; VCarve Pro post — Laguna Swift 5×10 (laguna-swift-5x10)
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Mach3/Mach4 setup before
; running on the machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Wood routing checklist:
; [1] Material clamped flat to spoilboard, no warps under bit path
; [2] Tool-length set: V-bit at sharp tip, end mill at flute bottom, drill at tip
; [3] WCS X0/Y0 at workpiece corner per VCarve Pro setup; Z0 = top of stock
; [4] Dust collection ON (set \`dustCollection: true\` to emit M7/M9, or
;     uncomment manually if your controller wires different M-codes)
; [5] Air-cut first: spindle off, Z high, 25–50% feed override
; ---------------------------------------------------------------------------
; Work area (mm): 1524 x 3048 x 203
; Spindle max: 24000 RPM
; Operation: cnc_vcarve
; ---------------------------------------------------------------------------
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
G94              ; feed in units/min
; Active work offset — verify fixture zero matches G54–G59 selection
G54
; ---------------------------------------------------------------------------
; Spindle on (dialect snippet — Mach3 emits M3 S<rpm>)
M3
G4 P2.0          ; dwell 2 s for spindle to reach commanded RPM (wood router warmup)
; M7              ; coolant/mist OFF — set dustCollection flag to emit M7 here
; M8              ; flood coolant — typically OFF for wood; uncomment for wet ops
; ---------------------------------------------------------------------------
; [ID-0110] Pre-cut safe-Z lift -- mirrors carvera_3axis.hbs / carvera_4axis.hbs
; so the first XY/Z move below executes from a known clearance regardless of
; what Z the controller booted into or where the previous job left it.
G0 Z203 ; safe Z retract before toolpath -- uses machine work area Z height
; V-carve — 22 ridge pts, 90° V-bit, depth cap 2.000 mm, res 2.000 mm
G0 Z6.000
G0 X2.000 Y2.000
G1 Z-2.000 F400
G1 X4.000 Y4.000 Z-2.000 F1500
G1 X6.000 Y4.000 Z-2.000 F1500
G1 X8.000 Y4.000 Z-2.000 F1500
G1 X10.000 Y4.000 Z-2.000 F1500
G1 X12.000 Y4.000 Z-2.000 F1500
G1 X14.000 Y4.000 Z-2.000 F1500
G1 X16.000 Y4.000 Z-2.000 F1500
G1 X18.000 Y4.000 Z-2.000 F1500
G1 X20.000 Y4.000 Z-2.000 F1500
G1 X20.000 Y6.000 Z-2.000 F1500
G1 X18.000 Y6.000 Z-2.000 F1500
G1 X16.000 Y6.000 Z-2.000 F1500
G1 X14.000 Y6.000 Z-2.000 F1500
G1 X12.000 Y6.000 Z-2.000 F1500
G1 X10.000 Y6.000 Z-2.000 F1500
G1 X8.000 Y6.000 Z-2.000 F1500
G1 X6.000 Y6.000 Z-2.000 F1500
G1 X4.000 Y6.000 Z-2.000 F1500
G1 X2.000 Y8.000 Z-2.000 F1500
G0 Z6.000
G0 X22.000 Y2.000
G1 Z-2.000 F400
G0 Z6.000
G0 X22.000 Y8.000
G1 Z-2.000 F400
; V-carve flat-bottom — 1 floor ring(s), rim inset 2.000 mm, floor z -2.000 mm, stepover 2.500 mm
G0 Z6.000
G0 X2.000 Y2.000
G1 Z-2.000 F400
G1 X22.000 Y2.000 F1500
G0 Z6.000
G0 X22.000 Y4.500
G1 Z-2.000 F400
G1 X2.000 Y4.500 F1500
G0 Z6.000
G0 X2.000 Y7.000
G1 Z-2.000 F400
G1 X22.000 Y7.000 F1500
G0 Z6.000
G0 X22.000 Y8.000
G1 Z-2.000 F400
G1 X2.000 Y8.000 F1500
G1 X2.000 Y2.000 F1500
G1 X22.000 Y2.000 F1500
G1 X22.000 Y8.000 F1500
G0 Z6.000
; ---------------------------------------------------------------------------
; M9              ; coolant/dust OFF — set dustCollection flag to emit M9 here
; Spindle off (dialect snippet — usually M5)
M5
G4 P3.0          ; dwell 3 s — spindle cool-down ramp before safe-Z retract
G0 Z203 ; safe Z retract — uses machine work area Z height
G0 X0 Y0                     ; park X Y at WCS origin (adjust to your preferred home)
M30              ; program end + rewind (Mach3 expects M30, not M2)
%
"
`;

exports[`cnc_vcarve posted snapshot (Laguna Swift, deterministic small wedge) > matches the normalized posted-program snapshot 1`] = `
"%
; VCarve Pro post — Laguna Swift 5×10 (laguna-swift-5x10)
; ---------------------------------------------------------------------------
; UNVERIFIED G-CODE — verify every line against your Mach3/Mach4 setup before
; running on the machine. Output is not guaranteed safe for any real machine.
; ---------------------------------------------------------------------------
; Wood routing checklist:
; [1] Material clamped flat to spoilboard, no warps under bit path
; [2] Tool-length set: V-bit at sharp tip, end mill at flute bottom, drill at tip
; [3] WCS X0/Y0 at workpiece corner per VCarve Pro setup; Z0 = top of stock
; [4] Dust collection ON (set \`dustCollection: true\` to emit M7/M9, or
;     uncomment manually if your controller wires different M-codes)
; [5] Air-cut first: spindle off, Z high, 25–50% feed override
; ---------------------------------------------------------------------------
; Work area (mm): 1524 x 3048 x 203
; Spindle max: 24000 RPM
; Operation: cnc_vcarve
; ---------------------------------------------------------------------------
G21        ; G21=mm / G20=inch — must match controller defaults at power-on
G90              ; absolute distance mode
G17              ; XY plane (typical for G2/G3 arcs)
G94              ; feed in units/min
; Active work offset — verify fixture zero matches G54–G59 selection
G54
; ---------------------------------------------------------------------------
; Spindle on (dialect snippet — Mach3 emits M3 S<rpm>)
M3
G4 P2.0          ; dwell 2 s for spindle to reach commanded RPM (wood router warmup)
; M7              ; coolant/mist OFF — set dustCollection flag to emit M7 here
; M8              ; flood coolant — typically OFF for wood; uncomment for wet ops
; ---------------------------------------------------------------------------
; [ID-0110] Pre-cut safe-Z lift -- mirrors carvera_3axis.hbs / carvera_4axis.hbs
; so the first XY/Z move below executes from a known clearance regardless of
; what Z the controller booted into or where the previous job left it.
G0 Z203 ; safe Z retract before toolpath -- uses machine work area Z height
; V-carve — 23 ridge pts, 90° V-bit, depth cap 3.000 mm, res 1.500 mm
G0 Z6.000
G0 X3.000 Y4.500
G1 Z-3.000 F400
G1 X3.000 Y3.000 Z-2.183 F1500
G1 X1.500 Y3.000 Z-1.500 F1500
G1 X1.500 Y1.500 Z-1.091 F1500
G0 Z6.000
G0 X4.500 Y4.500
G1 Z-3.000 F400
G1 X4.500 Y6.000 Z-3.000 F1500
G1 X6.000 Y6.000 Z-3.000 F1500
G1 X7.500 Y6.000 Z-3.000 F1500
G1 X9.000 Y6.000 Z-3.000 F1500
G1 X10.500 Y6.000 Z-3.000 F1500
G1 X12.000 Y6.000 Z-2.910 F1500
G1 X13.500 Y6.000 Z-2.547 F1500
G1 X15.000 Y6.000 Z-2.183 F1500
G1 X16.500 Y6.000 Z-1.819 F1500
G1 X18.000 Y6.000 Z-1.455 F1500
G1 X19.500 Y6.000 Z-1.091 F1500
G1 X21.000 Y6.000 Z-0.728 F1500
G1 X22.500 Y6.000 Z-0.364 F1500
G0 Z6.000
G0 X3.000 Y7.500
G1 Z-3.000 F400
G1 X4.500 Y7.500 Z-3.000 F1500
G1 X3.000 Y9.000 Z-2.183 F1500
G1 X1.500 Y9.000 Z-1.500 F1500
G1 X1.500 Y10.500 Z-1.091 F1500
G0 Z6.000
; ---------------------------------------------------------------------------
; M9              ; coolant/dust OFF — set dustCollection flag to emit M9 here
; Spindle off (dialect snippet — usually M5)
M5
G4 P3.0          ; dwell 3 s — spindle cool-down ramp before safe-Z retract
G0 Z203 ; safe Z retract — uses machine work area Z height
G0 X0 Y0                     ; park X Y at WCS origin (adjust to your preferred home)
M30              ; program end + rewind (Mach3 expects M30, not M2)
%
"
`;
